--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site
 title:              Christopher Lin
-bio:                'Aspiring Data Scientist | Data Analyst'
+bio:                "UBC MBAN '23 | Aspiring Data Scientist | Data Analyst"
 description:        "Hello, welcome to my personal and professional blog."
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
+logo:               'assets/img/photo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
