--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                "UBC MBAN '23 | Aspiring Data Scientist | Data Analyst"
 description:        "Hello, welcome to my personal and professional blog."
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/photo.jpg'
+logo:               'assets/img/photo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
