--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ disqus_shortname:   taylantatli
 
 # Social
 # if you don't have any of social below, comment the line.
-google:
+# google:
   #plus:            #username
-  analytics:        G-43ZM29XZW0
+  #analytics:        
   #verify:
   #ad-client:
   #ad-slot:
