--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Christopher Lin
-bio:                "UBC MBAN '23 | Aspiring Data Scientist | Data Analyst"
+bio:                "UBC MBAN '23 | Data Scientist | Data Analyst"
 description:        "Hello, welcome to my personal and professional blog."
 reading_time:       true
 words_per_minute:   200
